--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -678,7 +678,7 @@ msgid "Directory"
 msgstr "Verzeichnis"
 
 msgid "Frequently Asked Questions Directory"
-msgstr "Verzeichnis für Häufig gestellte Fragen"
+msgstr "Verzeichnis für häufig gestellte Fragen"
 
 msgid "Functions:"
 msgstr "Funktionen:"
