--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-16 06:53+0200\n"
+"POT-Creation-Date: 2024-06-06 08:32+0200\n"
 "PO-Revision-Date: 2022-03-22 07:59+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -436,6 +436,9 @@ msgstr "Italian"
 msgid "Romansh"
 msgstr "Roumain"
 
+msgid "Short title of the election"
+msgstr "Titre abrégé de l'élection"
+
 msgid "Other legislative periods"
 msgstr "Autres législatures"
 
@@ -659,6 +662,9 @@ msgstr "Afficher comme une question subsidiaire"
 
 msgid "Title of the the vote/proposal"
 msgstr "Titre du vote / de l'initiative"
+
+msgid "Short title of the the vote/proposal"
+msgstr "Titre abrégé du vote / de l'initiative"
 
 msgid "Title of the counter proposal"
 msgstr "Titre de le contre-projet"
