--- a/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-05-16 06:53+0200\n"
+"POT-Creation-Date: 2024-06-06 08:32+0200\n"
 "PO-Revision-Date: 2022-03-22 08:01+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -441,6 +441,9 @@ msgstr "Talian"
 msgid "Romansh"
 msgstr "Rumantsch"
 
+msgid "Short title of the election"
+msgstr "Titel curt da l'elecziun"
+
 msgid "Other legislative periods"
 msgstr "Autras periodas da legislatura"
 
@@ -665,6 +668,9 @@ msgstr "Mussar sco dumonda decisiva"
 
 msgid "Title of the the vote/proposal"
 msgstr "Titel da la votaziun / dal project"
+
+msgid "Short title of the the vote/proposal"
+msgstr "Titel curt da la votaziun / dal project"
 
 msgid "Title of the counter proposal"
 msgstr "Titel da la cuntraproposta"
