--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-06 08:32+0200\n"
+"POT-Creation-Date: 2024-06-08 10:38+0200\n"
 "PO-Revision-Date: 2022-03-22 07:59+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -657,6 +657,12 @@ msgstr "ID externe du contre-projet"
 msgid "External ID of tie breaker"
 msgstr "ID externe du jeu décisif"
 
+msgid "Direct Counter-Proposal"
+msgstr "Contre-projet direct"
+
+msgid "Indirect Counter-Proposal"
+msgstr "Contre-projet indirect"
+
 msgid "Display as tie-breaker"
 msgstr "Afficher comme une question subsidiaire"
 
@@ -712,7 +718,10 @@ msgstr "Nouveaux résultats intermédiaires"
 msgid "Final results"
 msgstr "Résultats finaux"
 
-msgid "Counter proposal accepted"
+msgid "Direct counter proposal accepted"
+msgstr "Contre-projet accepté"
+
+msgid "Indirect counter proposal accepted"
 msgstr "Contre-projet accepté"
 
 msgid "Manage"
@@ -763,6 +772,12 @@ msgstr "Objet de la votation"
 msgid "Tie-Breaker"
 msgstr "Question subsidiaire"
 
+msgid "Direct Counter Proposal"
+msgstr "Counter proposal"
+
+msgid "Indirect Counter Proposal"
+msgstr "Counter proposal"
+
 msgid "Yay"
 msgstr "Oui"
 
@@ -781,11 +796,14 @@ msgstr "Objet de la votation %"
 msgid "Yes %"
 msgstr "Oui %"
 
-msgid "Counter proposal %"
-msgstr "Contre-projet %"
-
 msgid "No %"
 msgstr "Non %"
+
+msgid "Direct Counter Proposal %"
+msgstr "Counter proposal %"
+
+msgid "Indirect Counter Proposal %"
+msgstr "Counter proposal %"
 
 #, python-format
 msgid "Regional (${on})"
@@ -1208,7 +1226,10 @@ msgstr "Recevoir des alertes SMS"
 msgid "Stop SMS subscription"
 msgstr "Arrêter l'abonnement SMS"
 
-msgid "Proposal and counter proposal rejected"
+msgid "Proposal and direct counter proposal rejected"
+msgstr "Initiative et contre-projet rejetées"
+
+msgid "Proposal and indirect counter proposal rejected"
 msgstr "Initiative et contre-projet rejetées"
 
 msgid "Proposal accepted"
@@ -1217,7 +1238,10 @@ msgstr "Initiative acceptée"
 msgid "Tie breaker in favor of the proposal"
 msgstr "Jeu décisif en faveur de l'initiative"
 
-msgid "Tie breaker in favor of the counter proposal"
+msgid "Tie breaker in favor of the direct counter proposal"
+msgstr "Jeu décisif en faveur de le contre-projet"
+
+msgid "Tie breaker in favor of the indirect counter proposal"
 msgstr "Jeu décisif en faveur de le contre-projet"
 
 msgid "Download a PDF with all the results:"
